# warthunder_haptics_gui

./: Cargo.toml
config/: settings.toml
src/: application.rs  buttplug_connector.rs  configuration_manager.rs  game_event_processor.rs  main.rs  message_passing.rs  war_thunder_connector.rs
